# MixUpOS

./: CMakeLists.txt  LICENSE  MIXUPOS-QUICKSTART.md  README.md  boot-mixupos.ps1  setup-mixupos-wsl.ps1
Base/driverkext/: README.md
Base/etc/: WindowServer.ini
Base/linux-driver/: README.md
Base/linux-driver/examples/: intel-i219.ldriver  mixgpu-opengl.ldriver  mixgpu-vulkan.ldriver
Base/res/apps/: AppImageLauncher.af  AppStore.af  Browser.af  CodeIt.af  CompatibilityAssistant.af  (+9 more)
Documentation/: AppImageSupport.md  BareMetalInstallation.md  BuildInstructions.md  BuildInstructionsWindows.md  FAQ.md  InstallerISO.md
Kernel/Arch/: init.cpp
Kernel/EFIPrekernel/: GOP.cpp
Kernel/Prekernel/: Prekernel.h  init.cpp
Kernel/Syscalls/: uname.cpp
Meta/: build-image-grub-uefi.sh  build-image-installer-iso.sh  build-image-raspberry-pi.sh  build-image-uefi.sh  extlinux.conf  grub-ebr.cfg  grub-gpt.cfg  grub-mbr.cfg  mixupos.sh
Toolchain/: MixUpAppImageRunner.sh  RunAppImage.sh
Userland/Applications/: CMakeLists.txt
Userland/Applications/About/: main.cpp
Userland/Applications/AppImageLauncher/: CMakeLists.txt  main.cpp
Userland/Applications/AppStore/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  PackageModel.cpp  PackageModel.h  main.cpp
Userland/Applications/AppStudio/: CMakeLists.txt  main.cpp
Userland/Applications/Browser/: BrowserWindow.cpp  Tab.cpp  WindowActions.cpp
Userland/Applications/CompatibilityAssistant/: CMakeLists.txt  main.cpp
Userland/Applications/CrashReporter/: main.cpp
Userland/Applications/DevLaunchpad/: CMakeLists.txt  main.cpp
Userland/Applications/DriverHub/: CMakeLists.txt  main.cpp
Userland/Applications/FeatureBoard/: CMakeLists.txt  main.cpp
Userland/Applications/FileManager/: main.cpp
Userland/Applications/FocusTimer/: CMakeLists.txt  main.cpp
Userland/Applications/KextManager/: CMakeLists.txt  main.cpp
Userland/Applications/LauncherForge/: CMakeLists.txt  main.cpp
Userland/Applications/LinuxDriverManager/: CMakeLists.txt  main.cpp
Userland/Applications/MixAppRunner/: CMakeLists.txt  main.cpp
Userland/Applications/MixOffice/: CMakeLists.txt  main.cpp
Userland/Applications/RecoveryCenter/: CMakeLists.txt  main.cpp
Userland/Applications/SystemMonitor/: main.cpp
Userland/Applications/SystemTweaks/: CMakeLists.txt  main.cpp
Userland/Applications/Welcome/: WelcomeWidget.cpp  WelcomeWindow.gml
Userland/Utilities/: CMakeLists.txt  man.cpp  mixappify.cpp
(+39 files in other folders)
