add_subdirectory(3DFileViewer)
add_subdirectory(About)
add_subdirectory(AnalogClock)
add_subdirectory(AppStore)
add_subdirectory(AppStudio)
add_subdirectory(Assistant)
add_subdirectory(AppImageLauncher)
add_subdirectory(Browser)
add_subdirectory(BrowserSettings)
add_subdirectory(Calculator)
add_subdirectory(Calendar)
add_subdirectory(CalendarSettings)
add_subdirectory(CertificateSettings)
add_subdirectory(CharacterMap)
add_subdirectory(ClockSettings)
add_subdirectory(CompatibilityAssistant)
add_subdirectory(CrashReporter)
add_subdirectory(Debugger)
add_subdirectory(DevLaunchpad)
add_subdirectory(DisplaySettings)
add_subdirectory(DriverHub)
add_subdirectory(Escalator)
add_subdirectory(FileManager)
add_subdirectory(FontEditor)
add_subdirectory(FeatureBoard)
add_subdirectory(FocusTimer)
add_subdirectory(GamesSettings)
add_subdirectory(Help)
add_subdirectory(HexEditor)
add_subdirectory(ImageViewer)
add_subdirectory(KeyboardMapper)
add_subdirectory(KeyboardSettings)
add_subdirectory(LauncherForge)
add_subdirectory(KextManager)
add_subdirectory(LinuxDriverManager)
add_subdirectory(Magnifier)
add_subdirectory(Mail)
add_subdirectory(MailSettings)
add_subdirectory(Maps)
add_subdirectory(MapsSettings)
add_subdirectory(MixAppRunner)
add_subdirectory(MouseSettings)
add_subdirectory(NetworkSettings)
add_subdirectory(PartitionEditor)
add_subdirectory(PDFViewer)
add_subdirectory(Piano)
add_subdirectory(PixelPaint)
add_subdirectory(Presenter)
add_subdirectory(RecoveryCenter)
add_subdirectory(Run)
add_subdirectory(Screenshot)
add_subdirectory(Settings)
add_subdirectory(SoundPlayer)
add_subdirectory(SpaceAnalyzer)
add_subdirectory(Spreadsheet)
add_subdirectory(MixOffice)
add_subdirectory(SystemMonitor)
add_subdirectory(SystemTweaks)
add_subdirectory(Terminal)
add_subdirectory(TerminalSettings)
add_subdirectory(TextEditor)
add_subdirectory(ThemeEditor)
add_subdirectory(VideoPlayer)
add_subdirectory(Weather)
add_subdirectory(Welcome)
